# nephele-deploy

./: .gitignore  0-setup-server.py  1-build-bxl-demo.py  1-deploy-karmada-on-kind.py  1-deploy-karmada-on-mk8s.py  2-deploy-karmada-on-mk8s.py  2-install-prometheus-on-kind.py  3-install-prometheus-crds-on-kind.py  3-more.py  6-install-some-kind-cluster.py  7-build-bxl-demo-local-kind.py  8-mount-bxl-demo-local-kind.py  Makefile  NOTES.md  README-kind.md  README.md  TODO.md  __5-install-cilium-cli-kind.py  common.py  constants.py  deploy-brussels.py  deploy-clean-all.py  deploy-docker.py  deploy-infra.py  deploy-karmada-on-kind.py  deploy-karmada-on-mk8s.py  deploy-mk8s.py  deploy-root-brussels.py  deploy-root-clean-all.py  deploy-root-docker.py  deploy-root-kind-k8s.py  deploy-root-mk8s.py  full-demo.sh  inventory-jd.py  inventory.py  pyproject.toml  rebuild-server.py  remote-install-test-smo.py  run-bxl-demo.py  setup-mk8s-hello.py  (+1 more)
bash-scripts/: deinstall-on-kind.sh  install-on-kind.sh  install-prometheus-crds.sh  install-prometheus.sh  prom-values.yaml  readme.md
demo-nginx/: 1-install-smo-cli-monorepo.py  2-install-kind-kubectl.py  5-deploy-karmada.py  6-install-prometheus-on-kind.py  9-install-nginx.py  Makefile  README.md
kind-script-bxl/: 10-install-nephele-smo.py  4-install-kubectl-karmada.py  5-install-prometheus.py  6-install-prometheus-members.py  8-merge-kube-configs.py  Makefile  error_from_terminal.txt  smo_error.txt
kind-script-bxl2/: 0-setup-server.py  10-install-nephele-smo.py  2-install-kind-kubectl.py  4-install-kubectl-karmada.py  Makefile  (+2 more)
(+186 files in other folders)
