[project]
name = "smo-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asciinema>=2.4.0",
    "devtools>=0.12.2",
    "hcloud>=2.5.2",
    "isort>=6.0.1",
    "pyinfra>=3.3.1",
    "ruff>=0.11.10",
    "watchfiles>=1.1.0",
]
